<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingHorizontal="10dp"
    android:background="@drawable/element_recycler_background"
>

    <TextView
        android:id="@+id/timer"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:text="@string/_5"
        style="@style/Snack_bar"
        app:drawableStartCompat="@drawable/ic_timer" />

    <TextView
        android:id="@+id/title"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/timer"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:text="@string/delete"
        android:textSize="18sp"
        android:textColor="@color/color_on_secondary"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:maxLines="3"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/undo"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/color_on_secondary"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginStart="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>